2003-09-12 Mariusz Woloszyn
	* library.c: fixed a minor bug that caused error while deleting
	  folders not in storage subfolder (removed trailing '/' in folder
	  names); fixed making folders on devices not supporting kodak PTP
	  extension; some debug improvement; 
2003-09-12 Mariusz Woloszyn
	* library.c, ptp-pack.c, ptp.c ptp.h: be proper as hell, changed all
	  '//' comments to '/* blah */' ;)
2003-09-12 Mariusz Woloszyn
	* ptp.h: added some defines (sync with libptpt2-1.0pre6)
	* library.c: use kodak extension operation ONLY VendorExtensionID
	  field indicates that the device uses kodak PTP extension
	* ptpcam.c: removed; download libptp2 sources if you need it
	* Makefile.am: ptpcam.c removed
	* README: updated for ptpcam.c removal
2003-09-11  Marcus Meissner <marcus@jet.franken.de>

	* library.c: Note down filename in info struct.
		     Update battery level status display (not quite finished).
		     Add Canon Digital IXUS 2.

2003-09-11  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added, Sony DSC-V1

2003-09-10  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Sony DSC-P31

2003-08-05 Mariusz Woloszyn
	* library.c: ups... PTP_OFC_EXIF_JPEG thumbnails may not contain
	  EXIF information... revertig to previous behavior :(
2003-08-05 Mariusz Woloszyn
	* library.c: return thumbnauil when asked for GP_FILE_TYPE_EXIF if
	  object is PTP_OFC_EXIF_JPEG, otherwise return 
	  GP_ERROR_NOT_SUPPORTED
2003-08-03 Mariusz Woloszyn
	* library.c: PTP do not offer plain EXIF data; return
	  GP_ERROR_NOT_SUPPORTED while downloading GP_FILE_TYPE_EXIF.
2003-08-29 Mariusz Woloszyn
	* library.c: allow downloading thumbnail of nonimage objects,
	  however only in case that the ThumbCompressedSize is greater than 0
2003-08-28 Mariusz Woloszyn
	* library.c: added Canon IXUS 400, thanks to Till Kamppeter
2003-08-28 Mariusz Woloszyn
	* library.c: added Nikon Coolpix 3500, 5000, 3100 & 2100, thanks to
	  Antti Tuominen
2003-08-22 Mariusz Woloszyn